update unit test